# src/main/resources/api.yaml
@@ -377,6 +377,10 @@ components:
         password:
           type: string
           description: The password of the user.
+        user_role:
+          type: string
+          description: The role of the user (admin or reviewer)
+          enum: ['admin', 'reviewer']
         created_at:
           type: string
           format: date-time
@@ -385,6 +389,7 @@ components:
         - name
         - email
         - password
+        - user_role
 
     UserInput:
       type: object
@@ -398,10 +403,16 @@ components:
         password:
           type: string
           description: The password of the user.
+        user_role:
+          type: string
+          description: The role of the user (admin or reviewer)
+          enum: [ 'admin', 'reviewer' ]
+          default: 'reviewer'
       required:
         - name
         - email
         - password
+        - user_role
 
     Restaurant:
       type: object
