# target/generated-sources/openapi/src/main/java/org/openapitools/model/UserInput.java
@@ -4,6 +4,7 @@ import java.net.URI;
 import java.util.Objects;
 import com.fasterxml.jackson.annotation.JsonProperty;
 import com.fasterxml.jackson.annotation.JsonCreator;
+import com.fasterxml.jackson.annotation.JsonValue;
 import org.openapitools.jackson.nullable.JsonNullable;
 import java.time.OffsetDateTime;
 import javax.validation.Valid;
@@ -18,7 +19,7 @@ import javax.annotation.Generated;
  * UserInput
  */
 
-@Generated(value = "org.openapitools.codegen.languages.SpringCodegen", date = "2023-03-27T12:40:33.691456+01:00[Europe/London]")
+@Generated(value = "org.openapitools.codegen.languages.SpringCodegen", date = "2023-03-27T13:18:10.696739+01:00[Europe/London]")
 public class UserInput {
 
   @JsonProperty("name")
@@ -29,6 +30,44 @@ public class UserInput {
 
   @JsonProperty("password")
   private String password;
+
+  /**
+   * The role of the user (admin or reviewer)
+   */
+  public enum UserRoleEnum {
+    ADMIN("admin"),
+    
+    REVIEWER("reviewer");
+
+    private String value;
+
+    UserRoleEnum(String value) {
+      this.value = value;
+    }
+
+    @JsonValue
+    public String getValue() {
+      return value;
+    }
+
+    @Override
+    public String toString() {
+      return String.valueOf(value);
+    }
+
+    @JsonCreator
+    public static UserRoleEnum fromValue(String value) {
+      for (UserRoleEnum b : UserRoleEnum.values()) {
+        if (b.value.equals(value)) {
+          return b;
+        }
+      }
+      throw new IllegalArgumentException("Unexpected value '" + value + "'");
+    }
+  }
+
+  @JsonProperty("user_role")
+  private UserRoleEnum userRole = UserRoleEnum.REVIEWER;
 
   public UserInput name(String name) {
     this.name = name;
@@ -87,6 +126,25 @@ public class UserInput {
     this.password = password;
   }
 
+  public UserInput userRole(UserRoleEnum userRole) {
+    this.userRole = userRole;
+    return this;
+  }
+
+  /**
+   * The role of the user (admin or reviewer)
+   * @return userRole
+  */
+  @NotNull 
+  @Schema(name = "user_role", description = "The role of the user (admin or reviewer)", requiredMode = Schema.RequiredMode.REQUIRED)
+  public UserRoleEnum getUserRole() {
+    return userRole;
+  }
+
+  public void setUserRole(UserRoleEnum userRole) {
+    this.userRole = userRole;
+  }
+
   @Override
   public boolean equals(Object o) {
     if (this == o) {
@@ -98,12 +156,13 @@ public class UserInput {
     UserInput userInput = (UserInput) o;
     return Objects.equals(this.name, userInput.name) &&
         Objects.equals(this.email, userInput.email) &&
-        Objects.equals(this.password, userInput.password);
+        Objects.equals(this.password, userInput.password) &&
+        Objects.equals(this.userRole, userInput.userRole);
   }
 
   @Override
   public int hashCode() {
-    return Objects.hash(name, email, password);
+    return Objects.hash(name, email, password, userRole);
   }
 
   @Override
@@ -113,6 +172,7 @@ public class UserInput {
     sb.append("    name: ").append(toIndentedString(name)).append("\n");
     sb.append("    email: ").append(toIndentedString(email)).append("\n");
     sb.append("    password: ").append(toIndentedString(password)).append("\n");
+    sb.append("    userRole: ").append(toIndentedString(userRole)).append("\n");
     sb.append("}");
     return sb.toString();
   }
